Modify logging config

--- a/logging.conf
+++ b/logging.conf
@@ -1,21 +1,38 @@
 [loggers]
-keys=root
+keys=root,googleapiclient.discovery,oauth2client.transport,oauth2client.client
 
 [handlers]
-keys=logfile
+keys=console
 
 [formatters]
-keys=logfileformatter
+keys=simple
 
 [logger_root]
 level=INFO
-handlers=logfile
+handlers=console
 
-[formatter_logfileformatter]
+[logger_googleapiclient.discovery]
+level=ERROR
+handlers=console
+propagate=0
+qualname=googleapiclient.discovery
+
+[logger_oauth2client.transport]
+level=ERROR
+handlers=console
+propagate=0
+qualname=oauth2client.transport
+
+[logger_oauth2client.client]
+level=ERROR
+handlers=console
+propagate=0
+qualname=oauth2client.client
+
+[handler_console]
+class=StreamHandler
+formatter=simple
+args=(sys.stdout, )
+
+[formatter_simple]
 format=%(asctime)s %(name)-12s: %(levelname)s %(message)s
-
-[handler_logfile]
-class=handlers.RotatingFileHandler
-level=NOTSET
-args=('data/budget.log','a',800000,100)
-formatter=logfileformatter
